# ArmNeonSamples

./: README.md
src/: .clang-format
src/Cryptography/SHA256/: CMakeLists.txt  README.md  Sha256.cpp  Sha256.h  Sha256Neon.cpp  Sha256Neon.h  Sha256Ref.cpp  Sha256Ref.h  main.cpp
src/Cryptography/SHA256/output/: result.csv
src/Vector_arithmetic/Add/Addition/: CMakeLists.txt  VecArithAddAdd.cpp  output.txt
src/Vector_arithmetic/Add/Narrowing_addition/: CMakeLists.txt  VecArithAddNarrowAdd.cpp  output.txt
src/Vector_arithmetic/Add/Saturating_addition/: CMakeLists.txt  VecArithAddSatAdd.cpp  output.txt
src/Vector_arithmetic/Add/Widening_addition/: CMakeLists.txt  VecArithAddWidenAdd.cpp  output.txt
src/Vector_arithmetic/Subtract/Narrowing_subtraction/: CMakeLists.txt  VecArithSubNarrowSub.cpp  output.txt
src/Vector_arithmetic/Subtract/Saturating_subtract/: CMakeLists.txt  VecArithSubSatSub.cpp  output.txt
src/Vector_arithmetic/Subtract/Subtraction/: CMakeLists.txt  VecArithSubSub.cpp  output.txt
src/Vector_arithmetic/Subtract/Widening_subtraction/: CMakeLists.txt  VecArithSubWidenSub.cpp  output.txt
